Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.15
-
Fix Version/s: 5.15.9, 6.0.1, 6.1.0 Alpha
-
Component/s: QPA
-
Labels:None
-
Platform/s:
-
Commits:427e639275be379e3577cd3b3c8a63a6b5e46d46 (qt/qtbase/dev) a48f500c3486a5df995be82ee39a6ed5585f8231 (qt/qtbase/6.0) d662ff828bf28d0c9ce41a7a4077074f423b312c (qt/tqtc-qtbase/tqtc/lts-5.15)
-
Sprint:UI Bug Fixing Q1/2021
Description
If the edit menu is showing after using the magnifier glass to move the cursor, you cannot close the menu if you click outside the input area.
Attachments
For Gerrit Dashboard: QTBUG-90332 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
330087,5 | iOS: ensure we close the edit menu when the user taps outside the input area | dev | qt/qtbase | Status: MERGED | +2 | 0 |
330813,2 | iOS: ensure we close the edit menu when the user taps outside the input area | 6.0 | qt/qtbase | Status: MERGED | +2 | 0 |
330824,2 | iOS: ensure we close the edit menu when the user taps outside the input area | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |